# s20-sockets

./: .kateconfig  CMakeLists.txt  consolereader.cpp  consolereader.h  dialog.cpp  dialog.h  dialog.ui  discover.h  main-gui.cpp  main.cpp  s20-gui.pro  s20.cpp  s20.pro  server.cpp  server.h  socket.cpp  socket.h
